Added printing found paths