@@ -3,32 +3,14 @@ import java.io.FileNotFoundException;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.util.*;
-
+/*
+Name: Adam Polner
+Problem:
+Pseudocode:
+ */
 public class Levenshtein {
     static HashSet<String> Dictionary = new HashSet<>();
     static HashMap<String, HashSet<String>> Neighbors = new HashMap<>();
-    public static class Path{
-        String word;
-        HashSet<Path> parents;
-        Path(String word){
-            this.word=word;
-            parents=new HashSet<>();
-        }
-        Path(String word,HashSet<Path> parents){
-            this.word=word;
-            this.parents=parents;
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if(o.getClass()==Path.class){
-                Path other = (Path)o;
-                return word.equals(other.word);
-            }
-            return word.equals(o);//for a string
-        }
-    }
-    static int index=-1;//index for where the intersection is in the arraylist of ends/frontiers
     public static void preCompute() throws IOException {//precomputation to put all neighbors in dictionaryWithNeighbors
         Scanner sc2 = new Scanner(new File("dictionarySortedLength.txt"));
         File neighbor = new File("dictionaryWithNeighbors");
@@ -102,111 +84,6 @@ public class Levenshtein {
         sc2.close();
 
     }
-    private static void findPaths(String w1, String w2) {
-        HashMap leftToFind = new HashMap<String,ArrayList<String>>();
-        leftToFind.put(w1, new ArrayList<String>());
-        HashMap leftFound = new HashMap<String,ArrayList<String>>();
-
-        HashMap rightToFind = new HashMap<String,ArrayList<String>>();
-        rightToFind.put(w2, new ArrayList<String>());
-        HashMap rightFound =  new HashMap<String,ArrayList<String>>();
-
-        int length = 0;
-
-        while (!leftToFind.isEmpty() && !rightToFind.isEmpty()) {
-            var intersection = new HashSet<String>(leftToFind.keySet());
-            intersection.retainAll(rightToFind.keySet());
-            if (!intersection.isEmpty()) {
-                // We've found some words in the middle, so we're done! Let's collect the paths.
-                ArrayList<String> a=buildPaths(intersection, leftToFind, leftFound, rightToFind, rightFound);
-                for(String b:a){
-                    System.out.println(b);
-                }
-            }
-
-            if (leftToFind.size() <= rightToFind.size()) {
-                leftToFind = advanceFrontier(leftToFind, leftFound);
-            } else {
-                rightToFind = advanceFrontier(rightToFind, rightFound);
-            }
-
-            length++;
-        }
-    }
-    private static ArrayList<String> buildPaths(HashSet<String> intersection,
-                                                HashMap leftFrontier, HashMap leftExplored, HashMap rightFrontier,
-                                                HashMap rightExplored) {
-        var paths = new ArrayList<String>();
-
-        for (var w : intersection) {
-            var pathsLeft = buildPathsForSide((List<String>) leftFrontier.get(w), true, leftExplored);
-            var pathsRight = buildPathsForSide((List<String>) rightFrontier.get(w), false, rightExplored);
-
-            if (pathsLeft.isEmpty()) {
-                for (var pr : pathsRight) {
-                    paths.add(w + " -> " + pr);
-                }
-            } else if (pathsRight.isEmpty()) {
-                for (var pl : pathsLeft) {
-                    paths.add(pl + " -> " + w);
-                }
-            } else {
-                for (var pl : pathsLeft) {
-                    for (var pr : pathsRight) {
-                        paths.add(pl + " -> " + w + " -> " + pr);
-                    }
-                }
-            }
-        }
-
-        return paths;
-    }
-    private static ArrayList<String> buildPathsForSide(List<String> l, boolean left,
-                                                       HashMap<String,ArrayList<String>> explored) {
-        var paths = new ArrayList<String>();
-
-        for (var s : l) {
-            var parents = explored.get(s);
-            if (parents.isEmpty()) {
-                paths.add(s);
-            } else {
-                for (var p : buildPathsForSide(parents, left, explored)) {
-                    if (left) {
-                        paths.add(p + " -> " + s);
-                    } else {
-                        paths.add(s + " -> " + p);
-                    }
-                }
-            }
-        }
-
-        return paths;
-    }
-    private static HashMap<String, ArrayList<String>> advanceFrontier(HashMap<String,ArrayList<String>> ToFind,HashMap Found) {
-        // Merge the current frontier into the explored space. This keeps history of where we've been, and
-        // ensures we don't add any duplicates as we expand.
-        Found.putAll(ToFind);
-
-        // Build a new frontier of the neighbors of the current frontier, and use that for the next round.
-        HashMap<String,ArrayList<String>> newEnds = new HashMap<String,ArrayList<String>>();
-
-        for (String word : ToFind.keySet()) {
-            HashSet<String> neighbors = Neighbors.get(word);
-            if(neighbors!=null){
-                for (String n : neighbors) {
-                    if (Found.containsKey(n)) {
-                        continue;
-                    }
-
-                    var parentList = newEnds.computeIfAbsent(n, k -> new ArrayList<>());
-                    parentList.add((String) word);
-                }
-            }
-        }
-
-        return newEnds;
-    }
-
     public static void main(String[] args) throws IOException {
         Scanner sc2 = new Scanner(new File("dictionaryWithNeighbors"));
         while (sc2.hasNext()) {//goes through with the neighbors
@@ -227,39 +104,38 @@ public class Levenshtein {
         sc.close();
         //preCompute();
 
-        //uses pre-computed neighbors;
+        //uses pre-computed neighbors: all below are timed with precomputed neighbors
         //tests: cat to dog, dog to cat, puppy to dog, dog to smart, dog to quack, monkey to business
         //test 1       24815.761561 ms predicted runtime (about 25 sec)
         //              Current time: 2 ms run (10000) times : 0ms
-        //              100 times: 0 ms | all paths work
-        String word1 = "cat";
-        String word2 = "dog";
+        //              100 times: 0 ms |
+        //String word1 = "cat";
+        //String word2 = "dog";
         //test 2       15703.301474 ms predicted runtime (about 16 sec)
         //              Current time: 2 ms run (10000) times : 0 ms
-        //              100 times: 0 ms | all paths work
+        //              100 times: 0 ms |
         //String word1="dog";
         //String word2="cat";
         //test 3      185795.471987 ms predicted runtime (about 3 min 6 sec)
         //                  current time : 13 ms
-        //            100 times: 5 ms  | all paths throws out of memory, all past this do too
+        //            100 times: 5 ms  |
         //String word1="puppy";
         //String word2="dog";
         //test 4      189735.666912 ms predicted runtime (about 3 min 10 sec)
         //              current time : 12 ms
-        //            100 times: 6 ms | all paths work without string1->string2
+        //            100 times: 6 ms |
         //String word1="dog";
         //String word2="smart";
         //test 5     1732498.366852 ms predicted runtime (about 29 min)
         //          current time : 50 ms
-        //            100 times: 20 ms | all paths give java.lang.OutOfMemoryError
+        //            100 times: 20 ms |
         //String word1="dog";
         //String word2="quack";
         //test 6     2814028.051959 ms predicted runtime (about 47 min)
         //          current time : 95 ms 10000 times: 5 ms
         //            100 times: 7 ms
-        //String word1="monkey";
-        //String word2="business";
-        ////to solve out of memory improve the maps to smaller sizes and use vm options: -Xlog:gc to print the garbage collector
+        String word1="monkey";
+        String word2="business";
         Long sum = Long.valueOf(0);
         int num =1;
         ArrayList<HashSet<String>> path =new ArrayList<>();
@@ -270,8 +146,7 @@ public class Levenshtein {
             sum += (post - pre);
         }
         System.out.println("Time: " + (sum / num) + " ms");
-        //PrintPath(path);
-        findPaths(word1,word2);
+        printsolvesqueue(word1,word2,path);
     }
     public static void PrintPath(ArrayList<HashSet<String>> map){
         generatePaths(map);
@@ -330,22 +205,6 @@ public class Levenshtein {
 
     public static ArrayList<HashSet<String>> solve(String word1, String word2) {//solving with the neighbor ends until they meet
         HashSet<String> usedWords = new HashSet<>();//not repeating a word helps keep the out of memory error away
-        HashMap<String,ArrayList<String>> EndLeft = new HashMap<>();
-        EndLeft.put(word1,new ArrayList<>());
-        HashMap<String,ArrayList<String>> LeftUsed = new HashMap<>();
-
-        HashMap<String,ArrayList<String>> EndRight = new HashMap<>();
-        EndRight.put(word1,new ArrayList<>());
-        HashMap<String,ArrayList<String>> RightUsed = new HashMap<>();
-
-        while(!EndLeft.isEmpty()&&EndRight.isEmpty()){
-            HashSet<String> Intersection = new HashSet<>(EndLeft.keySet());
-            Intersection.retainAll(EndRight.keySet());
-            if(!Intersection.isEmpty()){
-                buildPaths(Intersection,EndLeft,LeftUsed,EndRight,RightUsed);
-            }
-            LeftUsed.putAll(EndLeft);
-        }
         HashSet<String> end = new HashSet<>();
         ArrayList<HashSet<String>> ends1 = new ArrayList<>();
         ArrayList<HashSet<String>> ends2 = new ArrayList<>();
@@ -386,7 +245,6 @@ public class Levenshtein {
                 ends1.remove(ends1.size()-1);
                 ends2.remove(0);
                 ends1.add(intersection);
-                index=ends1.size();
                 ends1.addAll(ends2);
                 return ends1;
             }
